--- a/src/components/MovieDetailsCast/MovieDetailsCast.module.scss
+++ b/src/components/MovieDetailsCast/MovieDetailsCast.module.scss
@@ -1,23 +1,44 @@
+// .castList {
+//   //   display: grid;
+//   //   max-width: calc(100vw - 60px);
+//   //   grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+//   //   grid-gap: 16px;
+//   display: grid;
+//   max-width: calc(100vw - 60px);
+//   grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+//   grid-gap: 16px;
+
+//   & img {
+//     width: 100%;
+//     height: auto;
+//   }
+
+//   .defaultAvatar {
+//     display: block;
+//     min-height: 250px;
+//     background-size: 100%;
+//     background-repeat: no-repeat;
+//     background-position: center;
+//     background-image: url(../../images/defaultAvatar.png);
+//     background-color: darkgray;
+//   }
+// }
 .castList {
-  //   display: grid;
-  //   max-width: calc(100vw - 60px);
-  //   grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-  //   grid-gap: 16px;
   display: grid;
   max-width: calc(100vw - 60px);
   grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
   grid-gap: 16px;
 
-  & img {
+  img {
     width: 100%;
     height: auto;
   }
 
   .defaultAvatar {
     display: block;
-    min-height: 250px;
-    background-size: 100%;
-    background-repeat: no-repeat;
+    width: 100%;
+    height: 75%;
+    background-size: cover;
     background-position: center;
     background-image: url(../../images/defaultAvatar.png);
     background-color: darkgray;
